# flobopuyo

./: .#Makefile.1.19  .#Makefile.1.27  AnimatedPuyo.cpp  AnimatedPuyo.h  CMakeLists.txt  Changelog  GameControls.cpp  GameControls.h  HiScores.cpp  HiScores.h  INSTALL  InputManager.cpp  InputManager.h  IosException.cpp  IosException.h  IosImgProcess.cpp  IosImgProcess.h  IosVector.cpp  IosVector.h  Makefile  Makefile.flobo  PuyoAnimations.cpp  PuyoAnimations.h  PuyoCommander.cpp  PuyoCommander.cpp.actual  PuyoCommander.h  PuyoDoomMelt.c  PuyoDoomMelt.h  PuyoGame.cpp  PuyoGame.h  PuyoIA.cpp  PuyoIA.h  PuyoLock.cpp  PuyoLock.h  PuyoPlayer.h  PuyoStarter.cpp  PuyoStarter.h  PuyoStory.cpp  PuyoStory.h  PuyoVersion.c  (+31 more)
.github/workflows/: build.yml
data/sfx/: ._bi  flobopuyo_game1.xm  flobopuyo_game2.xm  flobopuyo_gameover.xm  flobopuyo_menu.xm  strange_fear.xm  strange_fear2.xm  strange_gameover.xm
data/story/: intro.txt
mac/: Info.plist  icon.icns
man/: flobopuyo.6
